# skislope

./: .gitignore  .gitmessage  .ruff_format.sh  CONTRIBUTING.md  DEVELOPMENT.md  FEATURES.md  Makefile  README.md  README_MCP.md  TESTING.md  TESTING_IMPROVEMENTS.md  UV_WORKFLOW.md  biome.json  commitlint.config.js  index.html  lefthook.yml  main.py  mcp_client.js  package-lock.json  package.json  playwright.config.js  pyproject.toml  pytest.ini  requirements.txt  run_elevation_server.py  server.py  uv.toml
js/: camera.js  main.js  materials.js  terrain.js  topography.js  weather.js
mcp/: __init__.py
mcp/elevation/: __init__.py  server.py
mcp/equipment/: __init__.py
mcp/terrain/: __init__.py
scripts/: run-tests.sh  setup-dev.sh
skislope_mcp/: __init__.py
skislope_mcp/elevation/: __init__.py  server.py
skislope_mcp/weather/: __init__.py
tests/: conftest.py  test_api_integration.py  test_elevation_provider.py  test_mcp_integration.py  test_mcp_server.py  test_mcp_server_startup.py  test_simple.py
tests/js/: setup.js
tests/js/e2e/: user-interaction.test.js
tests/js/integration/: mcp-integration.test.js  module-loading.test.js  rendering.test.js  runtime-errors.test.js
tests/js/performance/: benchmark.test.js
tests/js/unit/: camera.test.js  materials.test.js  mcp-client.test.js  terrain.test.js  topography.test.js  weather.test.js
