[project]
name = "skislope"
version = "0.1.0"
description = "3D Alpine Ski Terrain Rendering System with Real Topographical Data"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Ski Terrain Rendering Team"},
]
keywords = ["ski", "terrain", "3d-rendering", "mcp", "topography", "alpine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Simulation",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
]
requires-python = ">=3.11"
dependencies = [
    # Core runtime dependencies
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "click>=8.2.1",
]

[project.optional-dependencies]
# Core development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

# MCP functionality (required for MCP server)
mcp = [
    "mcp>=1.14.0",
]

# Performance and monitoring
perf = [
    "memory-profiler>=0.61.0",
    "py-spy>=0.3.14",
]

# All optional dependencies
all = [
    "skislope[dev,mcp,perf]",
]

[project.urls]
Homepage = "https://github.com/your-org/ski2"
Repository = "https://github.com/your-org/ski2"
Documentation = "https://github.com/your-org/ski2/blob/main/README.md"
"Bug Tracker" = "https://github.com/your-org/ski2/issues"

[project.scripts]
skislope-elevation-server = "skislope_mcp.elevation.server:main"
skislope-http-server = "server:main"

[tool.setuptools.packages.find]
include = ["skislope_mcp*"]
exclude = ["js*", "node_modules*", "tests*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
show-fixes = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["skislope", "mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
